added notestatus to API
